turtleart.square.Square.scala.error
Compilation error:
Square:3: error: identifier expected but integer literal found.
    forward(steps:200)
                  ^Square:5: error: ')' expected but '}' found.
  }
  ^