turtleart.square.Square.scala.code
override def run() {
  for (i <- 0 to 3){
    forward(steps:200)
  	right()
  }
}